# libWebSocketClient

./: CMakeLists.txt  README.md  WebSocketClient.cpp  WebSocketClient.h  cmake_uninstall.cmake.in
example/: CMakeLists.txt  main.cpp
src/: log.h
src/base64/: base64.cpp  base64.h
src/network/: SocketBase.cpp  SocketBase.h  SocketHeader.h
src/network/HTTP/: HTTPBuilder.cpp  HTTPBuilder.h  HTTPClient.cpp  HTTPClient.h  HTTPHeaderFields.cpp  HTTPHeaderFields.h  WSocketHeader.cpp  WSocketHeader.h  WebSocket.cpp  WebSocket.h
src/network/SSL/: openssl_hostname_validation.cpp  openssl_hostname_validation.h
src/network/TCP/: TCPSocket.cpp  TCPSocket.h  clsTCPSocket.cpp  clsTCPSocket.h
